--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,6 +4,7 @@ body {
   @include body-font;
   padding-top: 54px;
   color: $gray-600;
+  background-color: #ebf1f7;
 }
 @media (min-width: 992px) {
   body {
